commit on 'master'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <img class="avatar" id="wynsma-avatar" src="Abbi.jpeg" alt="Abbi Wynsma"/>
         <h1>Abbi Wynsma</h1>
-        <h2>Director of User Experience</h2>
+        <h2>Student</h2>
         <ul class="contacts">
             <li><a href=""><img src="twitter.png" alt="Twitter"></a></li>
             <li><a href=""><img src="github.png" alt="Github"></a></li>
