commit on 'master'

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Abbi Wynsma</h1>
         <h2>Student</h2>
         <ul class="contacts">
-            <li><a href=""><img src="twitter.png" alt="Twitter"></a></li>
-            <li><a href=""><img src="github.png" alt="Github"></a></li>
-            <li><a href=""><img src="email.png" alt="Email"></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
     
